@@ -13,9 +13,6 @@ bases:
       - name: centos
         channel: "7"
         architectures: [amd64]
-      - name: centos
-        channel: "8"
-        architectures: [amd64]
 parts:
   charm:
     build-packages: [git]
